--- a/app/src/lib/app.css
+++ b/app/src/lib/app.css
@@ -10,6 +10,8 @@
 }
 
 body {
+    background-color : black;
+    color: theme('colors.green.normal');
     font-family: "DEC Terminal Modern", monospace;
     font-size: 16px;
     line-height: 1.25;
