implemented lazy scrolling wit da cms? kinda gonna have to fix it lol

--- a/app/src/lib/app.css
+++ b/app/src/lib/app.css
@@ -15,4 +15,11 @@ body {
     font-family: "DEC Terminal Modern", monospace;
     font-size: 16px;
     line-height: 1.25;
+    /* No scroll bars >:( */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
