--- a/app/src/lib/app.css
+++ b/app/src/lib/app.css
@@ -9,12 +9,27 @@
     font-style: normal;
 }
 
+@keyframes glow {
+  0%, 100% {
+    text-shadow: 0 0 3px #f9ca16, 0 0 6px #f9ca16, 0 0 9px #ff00ff;
+  }
+  50% {
+    text-shadow: 0 0 6px #f9ca16, 0 0 12px #f9ca16, 0 0 18px #ff00ff;
+  }
+}
+
 body {
-    background-color : black;
-    color: theme('colors.green.normal');
+    background-color : #871614;
+    color: #f9ca16;
+    animation: glow 2s infinite alternate;
     font-family: "DEC Terminal Modern", monospace;
     font-size: 16px;
+    text-shadow: 0 0 5px #f9ca16, 0 0 10px #f9ca16, 0 0 20px #f9ca16, 0 0 40px #ff00ff, 0 0 80px #ff00ff, 0 0 120px #ff00ff;
     line-height: 1.25;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow-x: hidden; 
     /* No scroll bars >:( */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -23,3 +38,25 @@ body {
 body::-webkit-scrollbar {
     display: none;
 }
+
+.background-overlay {
+    position: fixed;
+    z-index: 1; /* Make sure it's below the content */
+    background: 
+      /* Vignette */
+      radial-gradient(
+        circle,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.05) 50%,
+        rgba(0, 0, 0, 0.1) 70%,
+        rgba(0, 0, 0, 0.25) 100%
+      );
+    background-attachment: scroll; /* Keeps the background fixed relative to the viewport */
+    background-size: cover; /* Ensures it covers the entire page */
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
+    width: 100%;
+    pointer-events: none; /* Allows interaction with the content */
+  }
+
