--- a/app/src/lib/app.css
+++ b/app/src/lib/app.css
@@ -9,7 +9,7 @@
     font-style: normal;
 }
 
-
+/* ff00ff for magenta again lol and check tailwind.config.cjs for red and yellow */
 body {
     background-color : #871614;
     color: #f9ca16;
@@ -30,4 +30,16 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-
+.vignette-overlay {
+    --mouse-x: 50%;
+    --mouse-y: 50%;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(
+        circle at var(--mouse-x) var(--mouse-y),
+        transparent 20%,
+        rgba(0, 0, 0, 0.25) 95%
+        );
+        transition: background 0.1s ease-out;
+    }
